# RAG-chatbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DATA_INGESTION_GUIDE.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  VLLM_INTEGRATION.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run_api.sh  run_api_tests.sh  scraped_data.json  scraped_data_generic.json
config/: logging.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  INTERVIEW_GUIDE.md  pdf_chunking_improvements.md
examples/: pipeline_demo.py
results/: EVALUATION_SUMMARY.md  final_retrieval_results.json  firecrawl_fixed_20260112_022656.json  full_rag_results.json  tiered_retrieval_results.json
scripts/: README.md  check_qdrant.py  export_qdrant.py  ingest_json.py  ingest_sample_data.sh
specs/001-multi-format-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-format-ingestion/checklists/: requirements.md
specs/001-multi-format-ingestion/contracts/: ingest-api.yaml
src/: __init__.py
src/api/: main.py
src/api/routes/: chat.py  documents.py  health.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  pipeline.py  prompts.py  prompts_egyptian.py  router.py
src/memory/: __init__.py  conversation.py  models.py
src/models/: __init__.py  embeddings.py  gemini.py  schemas.py  vllm_model.py
src/preprocessing/: __init__.py  chunker.py  format_detector.py  normalizer.py  pdf_chunker.py  pdf_cleaner.py
src/preprocessing/extractors/: __init__.py  base.py  docx.py  html.py  image.py  markdown.py  pdf.py  text.py
src/retrieval/: __init__.py  reranker.py  vectorstore.py
src/scraping/: __init__.py  te_scraper.py
streamlit_app/: app.py
tests/: README.md  __init__.py  conftest.py  qa_agent_2_chat_rag_tests.py  qa_agent_2_detailed_report.py  test_vllm_integration.py
tests/integration/: test_api.py  test_file_ingestion.py  test_memory_integration.py  test_plain_text_ingestion.py  test_text_metadata_qdrant.py  test_vllm_integration.py
tests/manual/: test_text_extractor_demo.py
tests/qa/: FINAL_QA_SUMMARY.md  QA_TEST_EXECUTION_REPORT.md  README_QA_TESTING.md
tests/unit/: test_api_schemas.py  test_chunker.py  test_conversation.py  test_embeddings.py  test_format_detector.py  test_normalizer.py  test_pdf_chunker.py  test_pdf_cleaner.py  test_pipeline.py  test_reranker.py  test_router.py  test_settings.py  test_text_extractor.py  test_vllm_model.py
tests/unit/test_extractors/: test_docx.py  test_html.py  test_image.py  test_markdown.py  test_pdf.py  test_text.py
